# apps/auth/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/auth/changePassword": {
             "post": {
-                "description": "User submits the code from their authenticator app to verify the TOTP setup\nRequest must contain \"session\" cookie containing the session token to respond to the challenge\nOn success, the user can proceed to sign in again",
+                "description": "Users are required to change password on first time login, using their username and password sent via email.\nSubmit The user's username and new password to respond to this auth challenge.\nRequest must contain \"session\" cookie containing the session token to respond to the challenge\nOn success, responds with next auth challenge, which should be to set up MFA",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
@@ -21,16 +21,23 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Verify initial code from authenticator app",
+                "summary": "Change Password for first-time Login",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "code",
+                        "example": "ABCDEF",
+                        "name": "newPassword",
                         "in": "formData"
                     },
                     {
                         "type": "string",
                         "name": "session",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "example": "joel.ow.2022",
+                        "name": "username",
                         "in": "formData"
                     }
                 ],
@@ -38,7 +45,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.StatusRes"
+                            "$ref": "#/definitions/models.AuthChallengeRes"
                         }
                     },
                     "400": {
@@ -49,12 +56,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/models.StatusRes"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.StatusRes"
                         }
@@ -131,7 +132,7 @@
         },
         "/auth/createUser": {
             "post": {
-                "description": "Admin registers user with Cognito user pool via email and password",
+                "description": "Admin registers user with Cognito user pool via email. Cognito sends an email with a temporary password to the user.",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
@@ -167,12 +168,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.StatusRes"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/models.StatusRes"
                         }
@@ -378,6 +373,59 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.SetupMFARes"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/verifyMFA": {
+            "post": {
+                "description": "User submits the code from their authenticator app to verify the TOTP setup\nRequest must contain \"session\" cookie containing the session token to respond to the challenge\nOn success, the user can proceed to sign in again",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verify initial code from authenticator app",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "code",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "session",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusRes"
                         }
                     },
                     "401": {
